# lumentix

./: .env.example  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: backend-ci.yml  contract-ci-alternative.yml  contract-ci.yml  contract.yml
backend/: .env.example  package-lock.json  package.json
backend/scripts/: check-synchronize.sh
backend/src/: app.module.ts  main.ts
backend/test/: sponsor-flow.e2e-spec.ts
contract/: .gitignore  Cargo.toml  Makefile  README.md
contract/src/: error.rs  get_protocol_fee_test.rs  lib.rs  lumentix_contract.rs  storage.rs  test.rs  types.rs  validation.rs
contract/src/contract/: mod.rs
contract/src/events/: mod.rs
contract/src/models/: mod.rs
contract/src/tests/: mod.rs
contract/test_snapshots/test/: test_cancel_event_and_refund.1.json  test_create_event_empty_name.1.json  test_create_event_invalid_capacity.1.json  test_create_event_invalid_price.1.json  test_create_event_invalid_time_range.1.json  test_create_event_success.1.json  test_get_event.1.json  test_get_event_not_found.1.json  test_initialize_already_initialized.1.json  test_initialize_success.1.json  test_purchase_ticket_insufficient_funds.1.json  test_purchase_ticket_sold_out.1.json  test_purchase_ticket_success.1.json  test_refund_event_not_cancelled.1.json  test_use_ticket_already_used.1.json  test_use_ticket_success.1.json  test_use_ticket_unauthorized.1.json
frontend/: package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx
src/: app.module.ts
(+141 files in other folders)
