[package]
name = "lumentix-ticket-contract"
name = "lumentix-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.5.0", features = ["alloc"] }
soroban-ledger-snapshot = "21.5.0"

[dev-dependencies]
soroban-sdk = { version = "21.5.0", features = ["alloc", "testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
overflow-checks = true
